Fixed blinks from overlapping, win conditions needed

--- a/style.css
+++ b/style.css
@@ -1,8 +1,12 @@
 /* Core Body and Text*/
 body{
     display: grid;
-    background-color: rgb(209, 209, 209);
+    background-color: rgb(24, 24, 24);
     font-family: 'Courier New', Courier, monospace;
+    background-image: url(https://wallpaper.dog/large/11005249.jpg);
+    background-repeat: no-repeat;
+    background-size: auto;
+    background-position: center;
 }
 h1, h2{
     display: grid;
@@ -10,6 +14,7 @@ h1, h2{
     color: rgb(255, 255, 255);
     text-shadow: 2px 2px 4px #000000;
 }
+
 /* Start and Quit Menu */
 #menu{
     display: grid;
@@ -34,12 +39,7 @@ h1, h2{
     background: none;
     text-shadow: 2px 2px 4px #000000;
 }
-
 /* Score Display*/
-#score{
-    display: grid;
-    justify-content: space-evenly;
-}
 .currScore{
     display: grid;
     grid-row: 1;
@@ -54,6 +54,7 @@ h1, h2{
     font-size: 30px;
     text-shadow: 2px 2px 4px #000000;
 }
+
 /*create 2x2 grid w/ respective colors*/
 #simon{
     margin: 100px auto;
@@ -64,30 +65,27 @@ h1, h2{
     grid-template-columns: 300px 300px;
     grid-column-gap: 15px;
     grid-row-gap: 15px;
-    border-radius: 70%;
-    overflow: hidden;
-    padding: 10px;
 }
 .red{
-    background-color: red;
+    background-color: rgb(240, 73, 73);
     border-radius: 30px;
     border-color: lightcoral;
     box-shadow: 2px 2px 4px #000000;
 }
 .green{
-    background-color: green;
+    background-color: rgb(30, 153, 30);
     border-radius: 30px;
     border-color: greenyellow;
     box-shadow: 2px 2px 4px #000000;
 }
 .blue{
-    background-color: blue;
+    background-color: rgb(72, 72, 255);
     border-radius: 30px;
     border-color: skyblue;
     box-shadow: 2px 2px 4px #000000;
 }
 .yellow{
-    background-color: yellow;
+    background-color: gold;
     border-radius: 30px;
     border-color: goldenrod;
     box-shadow: 2px 2px 4px #000000;
